# Programare_Concurenta_si_Distribuita

./: compose.yaml
tema_1/: .clang-tidy  CMakeLists.txt  app1.c  app2.c  app3.c  app4.c  build.sh  conanfile.py  justfile  vars.cfg
tema_2/: CMakeLists.txt  app1.c  app2.c  justfile
tema_3/: CMakeLists.txt  conanfile.py  execl.c  execle.c  execlp.c  execv.c  execve.c  execvp.c  justfile  shell.c  shell_config.cfg
tema_4/: CMakeLists.txt  file_worker.c  out_file
tema_5/: CMakeLists.txt  client1.c  justfile  server1.c
